--- a/BulkyBookWeb/Views/Category/Index.cshtml
+++ b/BulkyBookWeb/Views/Category/Index.cshtml
@@ -8,7 +8,7 @@
         <div class="col-6">
             <h2 class="text-primary">Category List</h2>
         </div>
-        <div class="col-6">
+        <div class="col-6 text-end">
             <a asp-controller="Category" asp-action="Create" class="btn btn-primarry">Create New Category</a>
         </div>
     </div>
