--- a/BulkyBookWeb/Views/Home/Index.cshtml
+++ b/BulkyBookWeb/Views/Home/Index.cshtml
@@ -4,6 +4,6 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome Ishan madhawa to</h1>
+    <h1 class="display-4">Welcome To ASP.NET SELF LERAN</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
